--- a/package.json
+++ b/package.json
@@ -1,19 +1,1 @@
-{ 
-  "engines": {
-    "node": "16.x"
-  },
-  "name": "expressgame",
-  "version": "2.0.0",
-  "description": "Adventure Game",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.2"
-  }
-}
+{"engines":{"node":"16.x"},"name":"expressgame","version":"2.0.0","description":"Adventure Game","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"node index.js"},"keywords":["heroku"],"author":"","license":"ISC","dependencies":{"ejs":"^3.1.6","express":"^4.17.2","express-session":"^1.17.2"}}
